# digital_compass

./: .gitmodules  README.md
cad_and_ecad/: compass_rose v25.f3z
circuit_python_test/: Dockerfile  README.md  example.py  example_bno055.py
i2c/: CMakeLists.txt  Dockerfile  README.md  read_from_sensor.cpp
software/: README.md  docker-compose.yaml
